fix dark mode icon visibility

--- a/assets/css/test.css
+++ b/assets/css/test.css
@@ -7,4 +7,5 @@
     display: inline-block;
     height: 2rem;
     width: 2rem;
+    fill: currentColor;
   }
